[package]
name = "rust-crypto-utils"
version = "0.1.0"
edition = "2021"
authors = ["Tony Chuks Awunor <your-email@example.com>"]
description = "Memory-safe cryptographic utilities for secure key handling and encryption"
license = "MIT"
repository = "https://github.com/guardsarm/rust-crypto-utils"
keywords = ["cryptography", "security", "encryption", "memory-safe", "financial"]
categories = ["cryptography", "authentication"]

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
hkdf = "0.12"
ed25519-dalek = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "password_hashing"
path = "examples/password_hashing.rs"

[[example]]
name = "file_encryption"
path = "examples/file_encryption.rs"
