[package]
name = "rust-crypto-utils"
version = "2.0.0"
edition = "2021"
authors = ["Tony Chuks Awunor <chuksawunor@guardsarm.com>"]
description = "Memory-safe cryptographic utilities for secure key handling, encryption, and post-quantum readiness"
license = "MIT"
repository = "https://github.com/guardsarm/rust-crypto-utils"
keywords = ["cryptography", "security", "encryption", "memory-safe", "financial"]
categories = ["cryptography", "authentication"]
readme = "README.md"

[features]
default = ["std"]
std = []
async = ["tokio"]
hardware-acceleration = []

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
pbkdf2 = "0.12"
hkdf = "0.12"
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tokio = { version = "1.35", features = ["full"], optional = true }
constant_time_eq = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[example]]
name = "password_hashing"
path = "examples/password_hashing.rs"

[[example]]
name = "file_encryption"
path = "examples/file_encryption.rs"

[[example]]
name = "key_exchange"
path = "examples/key_exchange.rs"

[[bench]]
name = "crypto_benchmark"
harness = false
